variables.Variables.scala.error
Compilation error:
Variables:4: error: not found: value isOverBaggel
if (isOverBaggel() == false) {
    ^Variables:8: error: not found: value pickupBaggel
  pickupBaggel()
  ^