variables.Variables.scala.code
var stepAmount = 0
var doneSteps = 0

if (isOverBaggel() == false) {
  forward()
  stepAmount = stepAmount + 1
} else {
  pickupBaggel()
  
}

if (isCarryingBaggle() == true) {
  backward()
}